fix(*): spacing of btw on large screen

--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,6 @@
   transition: all 500ms linear;
   width: 222px;
   margin: 0 auto;
-  vertical-align: center;
-  text-align: center;
 }
 
 .btn-hammer:hover {
@@ -30,8 +28,6 @@
   transition: all 500ms linear;
   width: 222px;
   margin: 0 auto;
-  vertical-align: center;
-  text-align: center;
 }
 
 .btn-lightbulb:hover {
@@ -48,8 +44,6 @@
   transition: all 500ms linear;
   width: 222px;
   margin: 0 auto;
-  vertical-align: center;
-  text-align: center;
 }
 
 .btn-phone:hover {
@@ -96,4 +90,59 @@
   text-transform: uppercase;
   padding-bottom: .5em;
   color: #15012b;
+}
+
+@media only screen and (min-width: 25em) {
+  .design-title h1 {
+    font-size: 4em;
+  }
+}
+
+@media only screen and (min-width: 38em) {
+  .dbg {
+    background-size: 120% 200%;
+  }
+  .design-title h1 {
+    font-size: 5.5em;
+    padding-bottom: .5em;
+  }
+}
+
+@media only screen and (min-width: 60em) {
+  .design-title h1 {
+    font-size: 5em;
+  }
+  .bg {
+    background-size: cover;
+  }
+  .btn-phone {
+    width: 262px;
+  }
+  .btn-hammer {
+    width: 262px;
+  }
+  .btn-lightbulb {
+    width: 262px;
+  }
+  .billboard {
+    height: 40em;
+  }
+}
+
+@media only screen and (min-width: 90em) {
+  .bg {
+    background-size: cover;
+  }
+  .design-title h1 {
+    font-size: 5.5em;
+  }
+  .btn-phone {
+    width: 280px;
+  }
+  .btn-hammer {
+    width: 280px;
+  }
+  .btn-lightbulb {
+    width: 280px;
+  }
 }
