--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -8,8 +8,7 @@
 	transition: all 500ms linear;
 	width: 222px;
 	margin: 0 auto;
-	vertical-align: center;
-	text-align: center;
+
 }
 
 @mixin text($color) {
